# esp32-nesemu

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.rst  flashrom.sh  partitions.csv  sdkconfig  sdkconfig.defaults
components/driver/: Kconfig  README.txt  component.mk  dma.c  gpio.c  gpio.c.dis  spi.c  spi_lcd.c
components/esp_nes/: CMakeLists.txt  osd.c  (+1 more)
components/nofrendo/: CMakeLists.txt  bitmap.c  bitmap.h  component.mk  config.c  event.c  gui.c  gui.h  gui_elem.c  idf_component.yml  intro.c  log.c  log.h  memguard.c  memguard.h  nofconfig.h  nofrendo.c  noftypes.h  osd.h  pcx.c  pcx.h  vid_drv.c  vid_drv.h
components/nofrendo/cpu/: dis6502.c  dis6502.h  nes6502.c  nes6502.h
components/nofrendo/libsnss/: libsnss.c  libsnss.h
components/nofrendo/mappers/: map000.c  map001.c  map002.c  map003.c  map004.c  map005.c  map007.c  map008.c  map009.c  map010.c  map011.c  map015.c  map016.c  map018.c  map019.c  map024.c  map032.c  map033.c  map034.c  map040.c  map041.c  map042.c  map046.c  map050.c  map064.c  map065.c  map066.c  map070.c  map073.c  map075.c  map078.c  map079.c  map085.c  map087.c  map093.c  map094.c  map099.c  map160.c  map229.c  map231.c  (+1 more)
components/nofrendo/nes/: mmclist.c  nes.c  nes.h  nes_mmc.c  nes_mmc.h  nes_pal.c  nes_ppu.c  nes_ppu.h  nes_rom.c  nes_rom.h  nesinput.c  nesstate.c  nesstate.h
components/nofrendo/sndhrdw/: fds_snd.c  mmc5_snd.c  nes_apu.c  nes_apu.h  vrcvisnd.c
main/: CMakeLists.txt  Kconfig.projbuild  config.h  controller.c  controller.h  idf_component.yml  main.c  osd.c  spi_lcd.c  spi_lcd.h  video_audio.c
(+59 files in other folders)
